# EdgeCompressor

./: .envTemplate  .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  MatLib.c  MatLib.h  PMCMean.c  PMCMean.h  README.md  argument_handler.c  argument_handler.h  bitreader.c  bitreader.h  cmake_install.cmake  cobham.csv  compressed_segment_builder.h  compression.c  compression.h  constants.c  constants.h  data.kml  distance_calculator.c  distance_calculator.h  error_bound_calculator.c  error_bound_calculator.h  global_error.c  global_error.h  gorilla  gorilla.c  gorilla.h  huffman.c  huffman.h  jsonprint.c  jsonprint.h  kml_vector.py  lat_out.csv  long_out.csv  main.c  (+30 more)
